tests/misc_errors/string.li
var a = "a"
println("-- $undefined_variable --")
println("a = $a; b = $b; c = $c;")

println("${ a + 1 } ${ x + 1 }")
println("${ 1 + "${ a + 1 } $x"} $x")

fn string_does_not_support_index_assign() {
  "a"[0] = "a"
  var s = "abc"
  s[1] = "a"
}
